Fix gap of images.

--- a/_sass/_front.sass
+++ b/_sass/_front.sass
@@ -1,23 +1,25 @@
 #hero
   background-color: #15C4CB
-  .hero-image
-    margin: 0 auto
-    width: 100%
-  .hero-text
-    margin: 40px 140px
-    h2
-      font-family: 'GothamLight', 'sans-serif' !important
-      margin-bottom: 20px
-      color: #ffffff
-      font-size: 2em
-      strong
-        font-family: 'GothamBook', 'sans-serif' !important
-        font-weight: normal
-    .slogan-one
-      font-size: 22px
-      margin: 0
-    .slogan-two
-      font-size: 17px
+  .col-md-12
+    padding: 0
+    .hero-image
+      margin: 0 auto
+      width: 100%
+    .hero-text
+      margin: 40px 140px
+      h2
+        font-family: 'GothamLight', 'sans-serif' !important
+        margin-bottom: 20px
+        color: #ffffff
+        font-size: 2em
+        strong
+          font-family: 'GothamBook', 'sans-serif' !important
+          font-weight: normal
+      .slogan-one
+        font-size: 22px
+        margin: 0
+      .slogan-two
+        font-size: 17px
 #hero-border
   left: 0
   top: 0
